--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta name="description" content="opis strony uwu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="przepisy drogowe, ruch drogowy, znaki">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/stylesheet.css">
